= Changelog
:repo-uri: https://github.com/jirutka/ssh-ldap-pubkey
:issues: {repo-uri}/issues
:pulls: {repo-uri}/pull
:tags: {repo-uri}/releases/tag


== unreleased

* Replace deprecated pyldap with python-ldap.


== link:{tags}/v1.3.3[1.3.3] (2020-05-15)

* Fix wrapper script to be compatible with Busybox `logger(1)`. ({issues}/43[#43])
* Fix `tls_reqcert` value of never to be accepted when defined. (PR {pulls}/47[#47])


== link:{tags}/v1.3.2[1.3.2] (2019-08-21)

* Fix broken keys listing due to over-wrapping of search filter. ({issues}/34[#34])


== link:{tags}/v1.3.1[1.3.1] (2019-04-27)

* Fix handling of complex LDAP filters. (PR {pulls}/33[#33])
* Retire Python 3.3 support (due to pyldap). (PR {pulls}/33[#33])


== link:{tags}/v1.3.0[1.3.0] (2018-03-02)

* Add support for SASL GSSAPI (Kerberos) authentication. (PR {pulls}/27[#27])
* Allow to disable LDAP referrals using option `referrals`.


== link:{tags}/v1.2.0[1.2.0] (2017-02-24)

* Make pubkey class and attribute configurable. (PR {pulls}/21[#21])


== link:{tags}/v1.1.1[1.1.1] (2017-01-04)

* Fix parsing of `uri` from config file. ({issues}/20[#20])


== link:{tags}/v1.1.0[1.1.0] (2016-12-28)

* Add support for multiple LDAP servers in ldap.conf.
* Allow to pass multiple `--uri` options.


== link:{tags}/v1.0.0[1.0.0] (2016-10-01)

* Refactor code-base, split it into a module and CLI script.
* Add support for `TLS_REQCERT` option. (PR {pulls}/11[#12])
* Add support for StartTLS. (PR {pulls}/14[#14])
* Replace python-ldap with pyldap.
* Make it compatible with Python 3. ({issues}/15[#15])
* Change sshPublicKey in ldapPublicKey objectclass to be optional.


== link:{tags}/v0.4.1[0.4.1] (2015-10-08)

* Catch `ldap.INSUFFICIENT_ACCESS` exception when adding/removing key to/from LDAP and print error message. (PR {pulls}/9[#9])


== link:{tags}/v0.4.0[0.4.0] (2015-02-07)

* Add option `-D` to specify the bind DN. ({issues}/7[#7])


== link:{tags}/v0.3.3[0.3.3] (2015-02-07)
