@@ -1,3 +1,0 @@
-import sys
-
-PY3 = sys.version_info >= (3, 0)
