@@ -8,6 +8,7 @@
 == unreleased
 
 * Replace deprecated pyldap with python-ldap.
+* Drop support for Python 2.
 
 
 == link:{tags}/v1.3.3[1.3.3] (2020-05-15)
